--- a/partials/_typography.scss
+++ b/partials/_typography.scss
@@ -1,14 +1,11 @@
 @font-face {
-    font-family:"Lato" ;
-    src: url(../../assets/fonts/Lato-Regular.ttf) format("truetype");
-    font-weight: 300;
-};
-
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Regular.ttf) format("truetype");
+  font-weight: 300;
+}
 
 @font-face {
-    font-family:"Lato" ;
-    src: url(../../assets/fonts/Lato-Bold.ttf) format("truetype");
-    font-weight: 500;
-};
-
-
+  font-family: "Lato";
+  src: url(../../assets/fonts/Lato-Bold.ttf) format("truetype");
+  font-weight: 500;
+}
